Update image path

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="10">
         <tr>
-            <td><img class="profiles_photo" src="./images/Blads_photo.jpg" alt="profiles_photo"></td>
+            <td><img class="profiles_photo" src="images/Blads_photo.jpg" alt="profiles_photo"></td>
             <td>
                 <h1>My pleasure. Im Blad&nbsp;🥰</h1>
                 <p>Content Producer at <strong><a href="">Media.Monks</a></strong></p>
